--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
+blinker==1.8.2
+click==8.1.7
 Flask==3.0.2
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.3
+importlib_metadata==7.2.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+Pygments==2.18.0
 python-dotenv==1.0.1
+rich==13.7.1
+SQLAlchemy==2.0.31
+typing_extensions==4.12.2
+Werkzeug==3.0.3
+WTForms==3.1.2
+zipp==3.19.2
